# ALLOY_PREDICTION

./: general_guidelines.md  pyproject.toml
src/alloy_prediction/data/: base_data_loader.py  hea_data_loader.py
src/alloy_prediction/data/data_files/: HEA _Phase_DataSet_slightly_modified.csv  HEA_Phase_DataSet_v1d_encoding_preserved.xlsx  pre_processing_data.ipynb
src/alloy_prediction/models/: base_model.py  linear_regression.py  neural_network.py  svm_regression.py  xgboost.py
src/alloy_prediction/optimizers/: base.py  base_optimizer.py  learnings.md
src/alloy_prediction/optimizers/example/genetic/: hardness_maximizing.py
src/alloy_prediction/optimizers/genetic/: chromosome.py  genetic_algorithm.py  population.py
