[project]
name = "alloy-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
